[package]
name = "my_parser_kma_group_test_1"
version = "0.1.8"
edition = "2021"
license = "MIT"
description = "A brief description"
include = ["img"]

[lib]
path ="my_parser_kma_group_test_1"
crate-type = ["lib"] 



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"