[package]
name = "my_parser_kma_group_test_2"
version = "0.1.13"
edition = "2021"
license = "MIT"
description = "A brief description"
include = ["src/main.rs", "src/lib.rs", "image.png", "README.md"]





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"