[package]
name = "my_parser_kma_group_test_2"
version = "0.1.19"
edition = "2021"
license = "MIT"
description = "A brief description"
include = ["src/main.rs", "src/lib.rs", "img", "README.md", "Cargo.toml", "img.png"]





# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"